--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>switch</name>
+  <name>switch_interface</name>
   <version>0.0.1</version>
-  <description>Generic interface for multi-channel switch boards connected by RS485</description>
+  <description>Generic interface for multi-channel switch boards</description>
   <maintainer email="openvmp@proton.me">Roman Kuzmenko</maintainer>
   <license>Apache License 2.0</license>
 
@@ -13,6 +13,11 @@
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  <depend>action_msgs</depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
     <build_type>ament_cmake</build_type>
